getAverageGradeProgram,getCountByProgram